* Improvement: Mobile header styling is now applied consistently at 991px and below to ease the transition from desktop to mobile, and generally simplify styling.
* Improvement: Footer design and user options have now been standardized across all theme bases; for all theme bases except Developer, see modified options at *Appearance > Theme Options > Styles > Footer*.
* Improvement: Better handling of retrieving FontAwesome icons for admin icon browser for more server setups, along with minor UI fixes.
* Improvement: On all theme bases, if no "Primary Navigation" menu is assigned, menu will not display (previously, only the Agent base behaved like this).
* Improvement: Collapsible widget area locations no longer have the word "Ads" in their titles.
* Improvement: Better consistency and styling with displaying collapsible widget areas.
* Improvement: Selections for "Above Content" and "Below Content" default widget areas now available with Widget Area element of layout builder.
* Improvement: Theme option style presets will now apply corresponding default theme logo to fit selected design, if the user hasn't configured a custom logo of their own.
* Improvement: Admin code editors now use WordPress's implementation of CodeMirror editor with coding help and error hints, introduced in WordPress 4.9.
* Improvement: New styling for the "Tweet" element added to the layout builder from the [Tweeple plugin](https://wordpress.org/plugins/tweeple).
* Improvement: There is now only one Post Slider and Simple Slider element; apply the "Popout" display option to these elements to achieve the full-width versions, which now display inline images.
* Improvement: For simplification, side panel background color and mobile menu background color options on Super User, Executive and Entrepreneur theme bases have been combined into one option; this was already the case on the Agent theme base.